syntax = "proto3";

package steemwatch.steem;
option go_package = "steempb";

message AccountWitnessVoteOperation {
    string account = 1;
    string witness = 2;
    bool approve = 3;
}
